at last a worthy fix

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <script src="main.js"></script>
 </head>
     <body>
+    <div id="win"><p>Congratulations! <br> You are very attentive and could win!</p></div>
+    <div id="lose"><p>What a nuisance! <br>You lose...</p></div>
     <div id="menu">
-        <h1>Paper, please</h1>
+        <h1>Papers, please</h1>
         <div id = "greeting"></div>
-        <button id="start">СТАРТ</button>
+        <button id="start">START</button>
     </div>
     <div id="gamefield">
        <div class="panel">
