--- a/index.html
+++ b/index.html
@@ -16,20 +16,16 @@
     </div>
     <div id="gamefield">
        <div class="panel">
-           <div id="score">SCORE: 0</div>
-           <div id="timer">TIMER: 10</div>
-           <div id="miss">MISS: 0</div>
+           <div id="score">SCORE: </div>
+           <div id="timer">TIMER: </div>
+           <div id="miss">MISS: </div>
        </div>
         <div id="doc">
             <h1>BLANK</h1>
         </div>
         <div id="face"></div>
-        <div class="help">
-            <p>DIPLOMACY: 10 DAYS</p>
-            <p>WORK: 15 DAYS</p>
-            <p>TOURISM: 3 DAYS</p>
-            <p>VISIT: 5 DAYS</p>
-            <p>SHOPPING: 1 DAY</p>
+        <div id="help">
+
         </div>
            <div id = "buttons">
                <button id="pass">PASS</button>
